# external-sort

./: .gitignore  LICENSE  README.md  TODO  external-mergesort.cabal  external-sort.cabal  stack.yaml
src/: Test.hs
src/Data/: ExternalMergeSort.hs  ExternalSort.hs
src/Data/ExternalMergeSort/: Internal.hs
src/Data/ExternalSort/: Internal.hs
test/: QuickCheck.hs  SortTester.hs  Spec.hs  TestUtil.hs
test/Data/ExternalMergeSort/: InternalSpec.hs
test/Data/ExternalSort/: InternalSpec.hs
