name:                external-mergesort
version:             0.1.0.0
synopsis:            A mergesort that runs in constant amount of memory
description:         Please see README.md
homepage:            http://github.com/githubuser/external-mergesort#readme
license:             BSD3
license-file:        LICENSE
author:              Sean Seefried
maintainer:          sean.seefried@gmail.com
copyright:           2016 Sean Seefried
category:            utility
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.ExternalMergeSort,
                       Data.ExternalMergeSort.Internal
  build-depends:       base >= 4.7 && < 5
                     , pipes
                     , bytestring
                     , vector
                     , vector-algorithms

  default-language:    Haskell2010
  ghc-options: -Wall

test-suite external-mergesort-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , external-mergesort
                     , pipes
                     , QuickCheck

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/external-mergesort
