name:                external-mergesort
version:             0.1.0.0
synopsis:            A mergesort that runs in constant amount of memory
description:         Please see README.md
homepage:            http://github.com/githubuser/external-mergesort#readme
license:             BSD3
license-file:        LICENSE
author:              Sean Seefried
maintainer:          sean.seefried@gmail.com
copyright:           2016 Sean Seefried
category:            utility
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable test
  hs-source-dirs:      src
  main-is:             Test.hs
  build-depends:       base >= 4.7 && < 5
                     , pipes

  ghc-options: -threaded -rtsopts -with-rtsopts=-N  -O2

library
  hs-source-dirs:      src
  exposed-modules:     Data.ExternalMergeSort,
                       Data.ExternalMergeSort.Internal
  build-depends:       base >= 4.7 && < 5
                     , pipes
                     , pipes-interleave
                     , pipes-bytestring
                     , bytestring

                     , vector
                     , vector-algorithms
                     , containers

  default-language:    Haskell2010
  ghc-options: -Wall -O2

test-suite external-mergesort-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , external-mergesort
                     , pipes
                     , hspec

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

test-suite external-mergesort-test-qc
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             QuickCheck.hs
  build-depends:       base
                     , external-mergesort
                     , pipes
                     , QuickCheck


  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/external-mergesort
