name:                external-sort
version:             0.1.0.0
synopsis:            An external sort that runs in constant amount of memory
description:         Please see README.md
homepage:            https://github.com/sseefried/external-sort#readme
license:             BSD3
license-file:        LICENSE
author:              Sean Seefried
maintainer:          sean.seefried@gmail.com
copyright:           2016 Sean Seefried
category:            utility
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.ExternalSort
  other-modules:       Data.ExternalSort.Internal
  build-depends:       base >= 4.7 && < 5
                     , pipes
                     , pipes-interleave
                     , containers
                     , unix
                     , directory
                     , vector
                     , vector-algorithms


  default-language:    Haskell2010
  ghc-options: -Wall -O2

-- This is really a test of sorts, so I put it in test directory
executable sort-tester
  hs-source-dirs:      test, src
  build-depends:       base >= 4.7 && < 5
                     , pipes
                     , pipes-interleave
                     , containers
                     , unix
                     , directory
                     , vector
                     , vector-algorithms
                     , binary
                     , bytestring
                     , criterion
                     , directory
                     , random
                     , unix
                     , external-sort


  main-is:             SortTester.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N  -O2
  default-language:    Haskell2010


test-suite external-sort-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Spec.hs
  build-depends:       base
                     , binary
                     , bytestring
                     , containers
                     , directory
                     , hspec
                     , pipes
                     , pipes-interleave
                     , random
                     , unix
                     , vector
                     , vector-algorithms



  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/external-sort
